Fix weak text contrast in contact slider display for dark themes

--- a/src/less/includes/styles-dark.less
+++ b/src/less/includes/styles-dark.less
@@ -66,3 +66,7 @@ table {
 		}
 	}
 }
+
+#slide-contact {
+  color: @grayDark;
+}
